add_executable(twisted_finger01 finger01.cc)
target_link_libraries(twisted_finger01 muduo_net)

add_executable(twisted_finger02 finger02.cc)
target_link_libraries(twisted_finger02 muduo_net)

add_executable(twisted_finger03 finger03.cc)
target_link_libraries(twisted_finger03 muduo_net)

add_executable(twisted_finger04 finger04.cc)
target_link_libraries(twisted_finger04 muduo_net)

add_executable(twisted_finger05 finger05.cc)
target_link_libraries(twisted_finger05 muduo_net)

add_executable(twisted_finger06 finger06.cc)
target_link_libraries(twisted_finger06 muduo_net)

add_executable(twisted_finger07 finger07.cc)
target_link_libraries(twisted_finger07 muduo_net)

